Update index for weekly meetings

--- a/index.html
+++ b/index.html
@@ -39,23 +39,20 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <h2>Our first meeting is on Monday!</h2>
+            <h2>Join us at our weekly Monday meetings!</h2>
             <p>We meet every week to talk tech and make decisions. During the first meeting, we'll spend time talking about what the OCF is and why it's awesome.</p>
             <p>
               <strong style="font-size: 18px;">Sound interesting?</strong><br />
-              <a href="https://www.facebook.com/events/977227972302731/">RSVP on Facebook</a> so we know how much food to get!
+              Drop by and say hello, or <a href="https://wiki.ocf.berkeley.edu/contact">get in touch</a>!
             </p>
           </div>
           <div class="col-sm-6">
             <div class="ocf-button-holder">
-              <h2>OCF General Meeting</h2>
-              <p><strong>When:</strong> Monday, September 15th @ 6:30pm</p>
-              <p><strong>Where:</strong> 320 Soda Hall</p>
-              <p>Free food and refreshments will be served!</p>
-
-              <p style="margin-bottom: 0px;">
-                <a href="https://www.facebook.com/events/977227972302731/" class="btn btn-lg">RSVP on Facebook</a>
-              </p>
+              <h2>OCF Board of Directors Meetings</h2>
+              <p>OCF Staff meet to discuss technology and to make decisions.</p>
+              <p>Drop-in visitors are always welcome, especially those interested in potentially joining the staff team!</p>
+              <p><strong>When:</strong> Mondays @ 6:10pm</p>
+              <p><strong>Where:</strong> 380 Soda Hall <em>(may change in the near future)</em></p>
             </div>
           </div>
         </div>
@@ -151,13 +148,13 @@
     <div class="ocf-first">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            <h2>Our first meeting is Monday, September 15 at 6:30pm.</h2>
+          <div class="col-md-12">
+            <h2>We meet every week on Mondays at 6:10pm.</h2>
             <h3>We hope to see you there!</h3>
           </div>
-          <div class="col-md-6 ocf-rsvp">
+<!--      <div class="col-md-6 ocf-rsvp">
             <a href="https://www.facebook.com/events/977227972302731/" class="btn">See details and RSVP on Facebook</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
