No more board meetings for Fall 2014

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
               <h2>OCF Board of Directors Meetings</h2>
               <p>OCF Staff meet to discuss technology and to make decisions.</p>
               <p>Drop-in visitors are always welcome, especially those interested in potentially joining the staff team!</p>
-              <p><strong>When:</strong> Mondays @ 6:10pm</p>
-              <p><strong>Where:</strong> 380 Soda Hall <em>(may change in the near future)</em></p>
+              <p><em>Board meetings will resume in the Spring 2014 semester.</em></p>
             </div>
           </div>
         </div>
