Update for next semester

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <h2>OCF Board of Directors Meetings</h2>
               <p>OCF Staff meet to discuss technology and to make decisions.</p>
               <p>Drop-in visitors are always welcome, especially those interested in potentially joining the staff team!</p>
-              <p><em>Board meetings will resume in the Spring 2014 semester.</em></p>
+              <p><em>Board meetings will resume in the Spring 2015 semester.</em></p>
             </div>
           </div>
         </div>
@@ -148,7 +148,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2>We meet every week on Mondays at 6:10pm.</h2>
+            <h2>We will meet every week starting next semester.</h2>
             <h3>We hope to see you there!</h3>
           </div>
 <!--      <div class="col-md-6 ocf-rsvp">
