Add lab home page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!doctype html>
+<!--
+      Think this site is hideous? We could use you help!
+      More info at https://hello.ocf.berkeley.edu/ :-)
+-->
 <html>
   <head>
     <meta charset="utf-8">
@@ -163,7 +167,7 @@
         <div class="row ocf-copyright">
           <p style="font-size: 16px; margin-bottom: 10px;">Have questions? <a href="https://wiki.ocf.berkeley.edu/contact/">Reach out to us!</a></p>
           <p>The Open Computing Facility is run entirely by student volunteers.</p>
-          <p>Copyright &copy; 1989&ndash;2014 Board of Directors of the Open Computing Facility.</p>
+          <p>Copyright &copy; 1989&ndash;2015 Board of Directors of the Open Computing Facility.</p>
           <p>Software logos are owned by their respective projects. Service icons come from Paomedia's awesome <a href="https://www.iconfinder.com/iconsets/small-n-flat">small-n-flat</a> set and are used under a CC BY license.</p>
         </div>
       </div>
