Fix conflict with hello, better colors

--- a/lab.html
+++ b/lab.html
@@ -23,7 +23,7 @@
     </style>
   </head>
 
-  <body class="ocf-lab">
+  <body class="ocf-lab2">
     <div class="container">
       <div class="row name-holder">
         <div class="col-sm-5 lab-logo">
