lab: improve colors and style

--- a/lab.html
+++ b/lab.html
@@ -37,7 +37,7 @@
             <li><a href="https://wiki.ocf.berkeley.edu/services/">Services</a></li>
             <li><a href="https://www.ocf.berkeley.edu/staff_hours">Staff Hours</a></li>
             <li><a href="https://hello.ocf.berkeley.edu/">Join Staff</a></li>
-            <li><a href="https://wiki.ocf.berkeley.edu/">Help</a></li>
+            <li><a href="https://github.com/ocf/">GitHub</a></li>
           </ul>
         </div>
       </div>
