Update meeting dates/times

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <h2>Join us at our weekly Monday meetings!</h2>
+            <h2>Join us at our weekly Thursday meetings!</h2>
             <p>We meet every week to talk tech and make decisions. During the first meeting, we'll spend time talking about what the OCF is and why it's awesome.</p>
             <p>
               <strong style="font-size: 18px;">Sound interesting?</strong><br />
@@ -54,8 +54,8 @@
             <div class="ocf-button-holder">
               <h2>OCF Board of Directors Meetings</h2>
               <p>OCF Staff meet to discuss technology and to make decisions.</p>
-              <p>Drop-in visitors are always welcome, especially those interested in potentially joining the staff team!</p>
-              <p><em>Board meetings will resume in the Spring 2015 semester.</em></p>
+              <p>Drop-in visitors are always welcome, especially those interested in joining the staff team!</p>
+              <p><em>Board meetings will resume on February 5th.</em></p>
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2>We will meet every week starting next semester.</h2>
+            <h2>We will meet every Thursday at 6:40 p.m. in 380 Soda, starting February 5th</h2>
             <h3>We hope to see you there!</h3>
           </div>
 <!--      <div class="col-md-6 ocf-rsvp">
