index: update with where/when for Spring
Just bringing back these lines from Fall

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
               <h2>OCF Board of Directors Meetings</h2>
               <p>OCF Staff meet to discuss technology and to make decisions.</p>
               <p>Drop-in visitors are always welcome, especially those interested in joining the staff team!</p>
-              <p><em>Board meetings will resume on February 5th.</em></p>
+              <p><strong>When:</strong> Thursdays @ 6:30pm (starting Feb. 5th)</p>
+              <p><strong>Where:</strong> 380 Soda Hall</p>
             </div>
           </div>
         </div>
