What about software freedom?

--- a/lab.html
+++ b/lab.html
@@ -43,7 +43,7 @@
       </div>
       <div class="row lab-intro">
         <h3>Did you know?</h2>
-        <h2>This computer lab is open-source and student-run.</h2>
+        <h2>This computer lab is free,<!-- libre,--> open-source and student-run.</h2>
         <p class="ocf-logos">
           <img src="images/logos/linux.png" alt="linux" />
           <img src="images/logos/debian.png" alt="debian" />
