Meetings will resume in Fall

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
               <h2>OCF Board of Directors Meetings</h2>
               <p>OCF Staff meet to discuss technology and to make decisions.</p>
               <p>Drop-in visitors are always welcome, especially those interested in joining the staff team!</p>
-              <p><strong>When:</strong> Thursdays @ 6:30pm</p>
-              <p><strong>Where:</strong> 380 Soda Hall</p>
+              <p>Meetings will resume in the Fall 2015 semester.</p>
             </div>
           </div>
         </div>
@@ -153,7 +152,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2>We meet every Thursday at 6:30 p.m. in 380 Soda.</h2>
+            <h2>We will resume meetings in Fall 2015.</h2>
             <h3>We hope to see you there!</h3>
           </div>
 <!--      <div class="col-md-6 ocf-rsvp">
