Add general meeting info

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
               <h2>OCF Board of Directors Meetings</h2>
               <p>OCF Staff meet to discuss technology and to make decisions.</p>
               <p>Drop-in visitors are always welcome, especially those interested in joining the staff team!</p>
-              <p>Meetings will resume in the Fall 2015 semester.</p>
+			  <p><em>Our Fall 2015 general meeting is coming up.</em></p>
+			  <p><strong>When:</strong> Thursday, September 10 at 7:00pm</p>
+			  <p><strong>Where:</strong> 380 Soda Hall</p>
             </div>
           </div>
         </div>
@@ -152,7 +154,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2>We will resume meetings in Fall 2015.</h2>
+			<h2>Our general meeting is Thursday, September 10 at 7:00pm in 380 Soda.</h2>
             <h3>We hope to see you there!</h3>
           </div>
 <!--      <div class="col-md-6 ocf-rsvp">
