Add new meeting time

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <h2>Join us at our weekly Thursday meetings!</h2>
+            <h2>Join us at our weekly Tuesday meetings!</h2>
             <p>We meet every week to talk tech and make decisions. During the first meeting, we'll spend time talking about what the OCF is and why it's awesome.</p>
             <p>
               <strong style="font-size: 18px;">Sound interesting?</strong><br />
@@ -55,8 +55,7 @@
               <h2>OCF Board of Directors Meetings</h2>
               <p>OCF Staff meet to discuss technology and to make decisions.</p>
               <p>Drop-in visitors are always welcome, especially those interested in joining the staff team!</p>
-			  <p><em>Our Fall 2015 general meeting is coming up.</em></p>
-			  <p><strong>When:</strong> Thursday, September 10 at 7:00pm</p>
+			  <p><strong>When:</strong> Every Tuesday at 7:00 p.m.</p>
 			  <p><strong>Where:</strong> 380 Soda Hall</p>
             </div>
           </div>
@@ -154,7 +153,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-			<h2>Our general meeting is Thursday, September 10 at 7:00pm in 380 Soda.</h2>
+			<h2>We meet every Tuesday at 7:00 p.m. in 380 Soda.</h2>
             <h3>We hope to see you there!</h3>
           </div>
 <!--      <div class="col-md-6 ocf-rsvp">
